--- a/home.css
+++ b/home.css
@@ -73,9 +73,6 @@ ul li {
     tab-size: 80px;
 }
 #mag{
-    height:60px;
-    width: 60px;
-    justify-items: center;
     margin-left: 30px;
     padding: 30px 20px;
     border: 1px solid white;
@@ -116,7 +113,7 @@ ul li {
 .categ-head {
     margin-left: 80px;
 }
-#underline {
+.underline {
     padding-bottom: 3px;
     border-bottom: 2px solid #e16120;  
     display: inline-block;  
