--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ a {
 
 /* ----------------banner--------------------------- */
 .banner {
-    background-image: url(./images/cooking-image.webp);
+    background-image: url(Stock_Photography_A_rustic_wooden_table_with_a_red_and_white_c_3.jpg);
     background-repeat: no-repeat;
     background-size:cover;
     width: 100%;
